--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "dom-autoscroller",
+  "name": "@mikekscholz/dom-autoscroller",
+  "author": "Michael Scholz (https://github.com/mikekscholz)",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "2.3.4",
   "description": "Auto scroll dom elements",
   "main": "dist/bundle.js",
@@ -15,7 +19,9 @@
     "scrolling",
     "DOM"
   ],
-  "author": "Quentin Engles <hollowdoor99@gmail.com>",
+	"contributors": [
+    "Quentin Engles <hollowdoor99@gmail.com>"
+  ],
   "license": "MIT",
   "dependencies": {
     "animation-frame-polyfill": "^1.0.0",
@@ -37,11 +43,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hollowdoor/dom_autoscroller.git"
+    "url": "https://github.com/mikekscholz/dom_autoscroller.git"
   },
   "files": [
     "dist",
     "LICENSE",
-    "index.js"
+    "src/index.js"
   ]
 }
